--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Ejercicios <3
 1) Agregar un heading nivel 1, y 2 parrafos.
 2) Crear una ordered list con 3 items.
 3) Crear una unordered list con 3 items.
-4) Crear un <div>, dentro del div: agregar una imagen, un h2 para mostrar un titulo para esa imagen y un <p> con breve descripcion.
+4) Crear 2 <div>, dentro de cada div: agregar una imagen, un h2 para mostrar un titulo para esa imagen y un <p> con breve descripcion.
 5) Crear 3 enlaces/links apuntando a sitios diferentes.
 6) Crear menú de navegación <nav> usando una unordered list <ul> que contenga 3 items con links cada uno.
 7) Crear un form con un input tipo texto, que tenga placeholder Buscar y un botón que diga Buscar.
