--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@ Ejercicios <3
 4) Crear 2 <div>, dentro de cada div: agregar una imagen, un h2 para mostrar un titulo para esa imagen y un <p> con breve descripcion.
 5) Crear 3 enlaces/links apuntando a sitios diferentes.
 6) Crear menú de navegación <nav> usando una unordered list <ul> que contenga 3 items con links cada uno.
-7) Crear un form con un input tipo texto, que tenga placeholder Buscar y un botón que diga Buscar.
+7) Crear un form con un input tipo texto, que tenga placeholder Buscar y un botón que diga Buscar. 
 8) Agregar input tipo texto con placeholder: Nombre.
 9) Agregar textarea con placeholder: Descripción.
 10) Crear footer que contenga el siguiente párrafo: &copy; 2024 Fullstack.
+11) Plus: agregar label para cada input.
+12) Plus: agregar estilos a los elementos
 
 -->
 
